<resources>
    <string name="app_name">Navigation Drawer</string>
    <string name="message">Message</string>
    <string name="chat">Chat</string>
    <string name="profile">Profile</string>
    <string name="communicate">Communicate</string>
    <string name="share">Share</string>
    <string name="send">Send</string>
    <string name="jaydeep_shetye">Jaydeep Shetye</string>
    <string name="shetyejaydeep_gmail_com">shetyejaydeep@gmail.com</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
