<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/message"
            android:icon="@drawable/ic_message"
            android:title="@string/message" />

        <item
            android:id="@+id/chat"
            android:icon="@drawable/ic_chat_bubble"
            android:title="@string/chat" />

        <item
            android:id="@+id/profile"
            android:icon="@drawable/ic_person"
            android:title="@string/profile" />
    </group>

    <item android:title="@string/communicate">
        <menu>
            <item
                android:id="@+id/share"
                android:icon="@drawable/ic_share"
                android:title="@string/share" />

            <item
                android:id="@+id/send"
                android:icon="@drawable/ic_send"
                android:title="@string/send" />

        </menu>
    </item>
</menu>